BSS-21627: BOI: Gamification Footer has created "Overlap" issue.

--- a/src/assets/css/pick-front.less
+++ b/src/assets/css/pick-front.less
@@ -14,7 +14,7 @@
 
 .binsFlexWrapperContainer-with-footer {
   position: relative;
-  top: -12%;
+  top: -7%;
   margin-left: 15%;
   width: 85%;
 
